Fix alignment and minor changes to formatting.

--- a/part_picker.css
+++ b/part_picker.css
@@ -209,6 +209,7 @@ h2 {
   border: solid #fff;
   border-radius: 5px;
   width: 100px;
+  text-align: center;
 }
 
 h3 {
